# aco

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.json
include/: ant_visualization.hpp  logger.hpp
include/aco/: ant.hpp
include/math/: base.hpp  constants.hpp  uwd_graph.hpp  vec2d.hpp
include/render/: app.hpp  basic_renderer.hpp  colors.hpp  init.hpp  input_manager.hpp  keys_mapping.hpp  pixel.hpp  window.hpp
include/utils/: rand.hpp
src/: ant_visualization.cpp
src/aco/: ant.cpp
src/render/: app.cpp  basic_renderer.cpp  init.cpp  input_manager.cpp  pixel.cpp  window.cpp
